Update versioning in macOS publish steps to use tagged version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -694,7 +694,7 @@ jobs:
             -p:PublishSingleFile=true \
             -p:PublishReadyToRun=true \
             -p:IncludeNativeLibrariesForSelfContained=true \
-            -p:Version=${{ github.ref_name }} \
+            -p:Version=${{ needs.tag.outputs.version }} \
             -o ./publish/osx-x64
         working-directory: ./Lighthouse.Backend/Lighthouse.Backend
 
@@ -706,7 +706,7 @@ jobs:
             -p:PublishSingleFile=true \
             -p:PublishReadyToRun=true \
             -p:IncludeNativeLibrariesForSelfContained=true \
-            -p:Version=${{ github.ref_name }} \
+            -p:Version=${{ needs.tag.outputs.version }} \
             -o ./publish/osx-arm64
         working-directory: ./Lighthouse.Backend/Lighthouse.Backend
 
