--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -667,7 +667,6 @@ jobs:
     timeout-minutes: 45
     needs:
       - tag
-      #- packageapp
 
     if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
@@ -694,7 +693,7 @@ jobs:
             -p:PublishSingleFile=true \
             -p:PublishReadyToRun=true \
             -p:IncludeNativeLibrariesForSelfContained=true \
-            -p:Version=${{ needs.tag.outputs.version }} \
+            -p:Version=${{ needs.tag.outputs.fileversion }} \
             -o ./publish/osx-x64
         working-directory: ./Lighthouse.Backend/Lighthouse.Backend
 
@@ -706,7 +705,7 @@ jobs:
             -p:PublishSingleFile=true \
             -p:PublishReadyToRun=true \
             -p:IncludeNativeLibrariesForSelfContained=true \
-            -p:Version=${{ needs.tag.outputs.version }} \
+            -p:Version=${{ needs.tag.outputs.fileversion }} \
             -o ./publish/osx-arm64
         working-directory: ./Lighthouse.Backend/Lighthouse.Backend
 
