--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -775,7 +775,7 @@ jobs:
           codesign --sign "$IDENTITY" --timestamp --options runtime --force --verbose=4 "$BINARY_PATH"
           codesign --verify --strict --verbose=2 "$BINARY_PATH"
           codesign --verify --deep --strict --verbose=2 "$BINARY_PATH"
-          codesign -dvvv "$BINARY_PATH" | grep -E "(Signature|timestamp|runtime|Authority)"
+          codesign -dvvv "$BINARY_PATH" | grep -E "(Signature|timestamp|runtime|Authority)" || true
           echo "✓ All binaries signed and verified successfully"
 
       - name: Notarize the universal binary
