--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -864,28 +864,15 @@ jobs:
           path: notarization-log.json
           if-no-files-found: ignore
 
-      - name: Package and upload signed macOS universal binary
-        run: |
-          UNIVERSAL_DIR="./publish/osx-universal"
-          OUTPUT_ZIP="./publish/Lighthouse-universal.zip"
-
-          # Use ditto to preserve executable bits and macOS metadata
-          ditto -c -k --sequesterRsrc --keepParent "$UNIVERSAL_DIR" "$OUTPUT_ZIP"
-
       - name: Upload signed macOS universal binary artifact
         uses: actions/upload-artifact@v4
         with:
           name: Lighthouse-osx-universal-${{ needs.tag.outputs.version }}
-          path: ./publish/Lighthouse-universal.zip
-
-  # Disabled codesign-windows job until a signing certificate is available
-  #  codesign-windows:
-  #    name: Sign Windows Binaries
+          path: ./publish/osx-universal
 
   verifymacos:
     name: Verify macOS signed + notarized binary
     runs-on: macos-latest
-    # Requires APPLE_ID, APPLE_APP_PASSWORD, APPLE_TEAM_ID secrets in repository settings
     needs:
       - codesign-macos
       - tag
@@ -979,6 +966,12 @@ jobs:
           cat ./publish/universal/lighthouse.log || true
           rm -rf ./publish/universal/logs
           rm -f ./publish/universal/lighthouse.log
+
+
+
+  # Disabled codesign-windows job until a signing certificate is available
+  #  codesign-windows:
+  #    name: Sign Windows Binaries
   #    runs-on: [self-hosted, codesign]
   #    timeout-minutes: 5
   #    needs:
