--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -688,6 +688,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+      
       - name: Install pnpm dependencies
         run: pnpm install --frozen-lockfile
         working-directory: ./Lighthouse.Frontend
