--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -988,45 +988,57 @@ jobs:
           pkill Lighthouse || true
           cat ./publish/Lighthouse-universal/lighthouse.log || true
 
-
   codesign-windows:
     name: Sign Windows Binaries
-    runs-on: [self-hosted, codesign]
-    timeout-minutes: 5
+    runs-on: [self-hosted, windows, codesign]
+    timeout-minutes: 10
     needs:
       - tag
       - packageapp
-
     if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
-
     environment:
       name: CodeSign
 
     steps:
-      - uses: actions/download-artifact@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
           name: Lighthouse-win-x64-${{ needs.tag.outputs.version }}
           path: ./artifacts/win-x64
 
-      - name: Sign Windows executables
+      - name: Sign EXE and DLL files
+        shell: pwsh
         run: |
-          # Sign both EXE and DLL files in a single invocation
-          sign.sh ./artifacts/win-x64 "Lighthouse*.exe" "Lighthouse*.dll"
+          $thumbprint = $env:CERT_THUMBPRINT
+          if (-not $thumbprint) { throw "CERT_THUMBPRINT environment variable is not set" }
+
+          $files = Get-ChildItem -Path ./artifacts/win-x64 -Filter "Lighthouse*.exe","Lighthouse*.dll"
+          foreach ($file in $files) {
+              Write-Host "Signing $file with certificate thumbprint $thumbprint"
+              & "signtool.exe" sign /fd SHA256 /td SHA256 /tr http://timestamp.digicert.com /sha1 $thumbprint $file.FullName
+          }
         env:
-          YUBIKEY_PIN: ${{ secrets.YUBIKEY_PIN }}
+          CERT_THUMBPRINT: ${{ secrets.CERT_THUMBPRINT }}
 
       - name: Verify signatures
-        continue-on-error: true 
+        continue-on-error: true
+        shell: pwsh
         run: |
-          # Verify EXE and DLL files in a single invocation
-          verify.sh ./artifacts/win-x64 "Lighthouse*.exe" "Lighthouse*.dll"
+          $files = Get-ChildItem -Path ./artifacts/win-x64 -Filter "Lighthouse*.exe","Lighthouse*.dll"
+          foreach ($file in $files) {
+              Write-Host "Verifying $file"
+              & "signtool.exe" verify /pa $file.FullName
+          }
 
-      - name: Delete unsigned windows artifact
+      - name: Delete unsigned artifact
         uses: geekyeggo/delete-artifact@v5
         with:
           name: Lighthouse-win-x64-${{ needs.tag.outputs.version }}
 
-      - name: Upload signed windows artifact
+      - name: Upload signed artifact
         uses: actions/upload-artifact@v4
         with:
           name: Lighthouse-win-x64-${{ needs.tag.outputs.version }}
