--- a/.gitignore
+++ b/.gitignore
@@ -420,3 +420,4 @@ Lighthouse.Backend/Lighthouse.Backend/DB_Backup/*
 
 
 Lighthouse.Backend/Lighthouse.Backend.Tests/Services/Implementation/Licensing/valid_not_expired_license.json
+tools/codesign/actions-runner/*
