--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1027,7 +1027,7 @@ jobs:
         continue-on-error: true
         shell: pwsh
         run: |
-          $files = Get-ChildItem -Path ./artifacts/win-x64 -Filter "Lighthouse*.exe","Lighthouse*.dll"
+          $files = Get-ChildItem -Path ./artifacts/win-x64/* -Include "Lighthouse*.exe","Lighthouse*.dll"
           foreach ($file in $files) {
               Write-Host "Verifying $file"
               & "signtool.exe" verify /pa $file.FullName
