--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -824,6 +824,25 @@ jobs:
             p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
             p12-password: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
 
+        - name: Create entitlements file
+          run: |
+            cat > entitlements.plist << EOF
+            <?xml version="1.0" encoding="UTF-8"?>
+            <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+            <plist version="1.0">
+            <dict>
+              <key>com.apple.security.cs.allow-unsigned-executable-memory</key>
+              <true/>
+              <key>com.apple.security.cs.disable-library-validation</key>
+              <true/>
+              <key>com.apple.security.network.server</key>
+              <true/>
+              <key>com.apple.security.network.client</key>
+              <true/>
+            </dict>
+            </plist>
+            EOF
+
         - name: Sign all binaries and app bundle
           env:
             APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
@@ -856,7 +875,13 @@ jobs:
             fi
 
             chmod +x "$BINARY_PATH"
-            codesign --sign "$IDENTITY" --timestamp --options runtime --force --verbose=4 "$BINARY_PATH"
+            codesign --sign "$IDENTITY" \
+              --entitlements entitlements.plist \
+              --timestamp \
+              --options runtime \
+              --force \
+              --verbose=4 \
+              "$BINARY_PATH"
             echo "✓ Main executable signed"
 
             echo "=== Signing App Bundle ==="
